# stochastic_lifting

./: .gitignore  CODESTYLE.md  README.md  pyproject.toml  requirements.txt  wave.ipynb
sl/: __init__.py  dnn.py  metric.py  opt.py  plot.py  sde.py  unet.py  wave.py
