[project]
name = "stochastic-lifting"
version = "0.1.0"
description = "Demo implementation utilities for stochastic lifting experiments."
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sl*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
